--- a/Shi'era/About.html
+++ b/Shi'era/About.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sheira developers</title>
+  <link rel="stylesheet" href="About.css">
+</head>
+<body>
+  <header>
+    <nav>
+    <img src="logo.png" class="logo">
+      <input type="checkbox" id="menu-toggle">
+      <label for="menu-toggle" class="menu-btn"></label>
 
+     <div class="nav-link">
+        <ul>
+          <li><a href="Banner.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+           <li><a href="Course.html">courses</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <h1 class="title">Shi'era Developers</h1>
+  <div class="mission">
+    <h2 class="mission-h">Mission statment</h2>
+    <p class="mission-p">We aim to help students grow in technology, personal development, and Islamic character through mentorship and practical learning.</p>
+  </div>
+  <div class="who">
+    <h2 class="who-h">Who We Are</h2>
+    <p class="who-p">
+      Shi’era Developers is a student-led community that guides learners in frontend development, graphic design, UI/UX, and other digital skills. We focus on hands-on projects, collaborative learning, and consistent growth.
+    </p>
+  </div>
+  <div class="vision">
+    <h2 class="vision-h">Our Vision </h2>
+    <p class="vision-p">
+      To create a generation of confident Muslim tech leaders who learn with sincerity, build with purpose, and contribute positively to their community.
+    </p>
+</div>
+
+<h2 class="contact-title" id="contact">Contact us</h2>
+<div class="contact-div">
+  <p>Have questions or want to join our upcoming programs? Reach out to us we would love to hear from you.</p>
+  <h3>Email:</h3>
+  <a href=
+  "https://mailto:shieradevelopers@gmail.com" target="_blank" class="email">shieradevelopers@gmail.com</a>
+  <h3>Telegram_channel:</h3>
+  <a href="https://t.me/shieradevelopers" class="tg">shiera_Developers</a>
+  <h3>linkedin:</h3>
+  <a href="https://www.linkedin.com/posts/shieradevelopers_welcome-back-to-the-shiera-podcast-s02-activity-7391530936930062336-Gtuc?utm_source=share&utm_medium=member_android&rcm=ACoAAFkT3ZkBtuukLtfcBXx8n6RH_rvjqpPlYGc" class="linkdin">linkedin</a>
+</div>
+
+
+<hr>
+<footer class="footerr">
+  <p>Shi'era developers</p>
+  <p>
+    &copy;2025 All rights reserved.
+  </p>
+</footer>
+</body>
+
+</html>
