--- a/Login form/Login.html
+++ b/Login form/Login.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SIMPLE LOGIN FORM</title>
+        <link rel="stylesheet" href="Login.css">
+    </head>
+    <body>
+        <div class="wrapper">
+            <div class="title">Login Form</div>
+            <form action="#">
+                <div class="field">
+                    <input type="text" required>
+                    <label>Email address</label>
+                </div>
+                <div class="field">
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="pass-link"><a href="#">Forgot password?</a></div>
+                <div class="field">
+                    <input type="submit" value="login">
+                    
+                </div>
+            </form>
+        </div>
+    </body>
+</html>
